REST API: User By id, all cards, cards by id (#12)
Persistence for Cards
Service for Cards and User
