# src/main/java/com/example/ocgBackend/rest/UserController.java
@@ -2,6 +2,7 @@ package com.example.ocgBackend.rest;
 
 import com.example.ocgBackend.rest.api.UserApi;
 import com.example.ocgBackend.rest.api.UserApiDelegate;
+import com.example.ocgBackend.rest.api.dto.UserDto;
 import com.example.ocgBackend.rest.api.dto.Users;
 import com.example.ocgBackend.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -9,6 +10,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
 import org.springframework.web.context.request.NativeWebRequest;
 
+import java.math.BigDecimal;
 import java.util.Optional;
 
 @Component
@@ -19,8 +21,12 @@ public class UserController implements UserApi, UserApiDelegate {
 
     @Override
     public ResponseEntity<Users> getUserPreferences() {
-        System.out.println("REQUEST");
         return userService.getAllUsers();
+    }
+
+    @Override
+    public ResponseEntity<UserDto> getUserById(BigDecimal userId) {
+        return userService.getUserById(userId.longValue());
     }
 
     @Override
